--- a/genetic-algorithms-tutorial.ipynb
+++ b/genetic-algorithms-tutorial.ipynb
@@ -956,9 +956,7 @@
    "source": [
     "We can see after only a few epochs, the best fitness comes very close to optimal and the average fitness increases dramatically after the first epoch and then fluctuates but still relatively close to the population best.\n",
     "\n",
-    "A graph of fitness over time would have been appropriate here but considering the very small problem size, it is very quick to converge to an optimal solution and the average population fitness does jump around a little which would make a very aliased graph.\n",
-    "\n",
-    "I have a feeling this may not be very convincing and it's possible the algorithm is just lucky considering the trivial problem. Below I've scaled it up to higher dimensions and output the expected minimum versus the found minimum:"
+    "Just to verify for higher dimensionality because two is trivial, I've scaled it up and output the best in population fitness, average in population fitness, and consider the distance from target (i.e. how close it was to reaching the global optimum)."
    ]
   },
   {
@@ -1005,6 +1003,18 @@
    "metadata": {},
    "source": [
     "As above, if incorrect, it is still within the realm of correct. This is because as the problem size increases, more epochs are needed, or the genetic algorithm parameters may need to change. Parameters that work for a small problem may not scale up to a larger problem.\n",
+    "\n",
+    "Since a graph of closeness to target over time for two dimensions may not show much considering how quickly it converges, I've made a graph in 55 dimensions using a population size of 500 and over 100 epochs. Otherwise the parameters remain the same.\n",
+    "\n",
+    "<img width=432px src=\"./images/plot_over_time.png\"/>\n",
+    "\n",
+    "This show the population best (green) and population average (blue) over time. Note the population best increases or remains the same with each generation whereas the population average does fluctuate (although the trend remains improving). This is due to mutation making the population on average more diverse and thus fitness fluctuates.\n",
+    "\n",
+    "Lastly, here's a full runthrough of the algorithm with original conditions in two dimensions for ten epochs:\n",
+    "\n",
+    "<img width=432px src=\"./images/animation.gif\"/>\n",
+    "\n",
+    "You can see the population does shrink around the global optimum which is the expected result.\n",
     "\n",
     "Other than that, this wraps up my genetic algorithm tutorial.\n",
     "\n",
