--- a/genetic-algorithms-tutorial.ipynb
+++ b/genetic-algorithms-tutorial.ipynb
@@ -1006,13 +1006,13 @@
     "\n",
     "Since a graph of closeness to target over time for two dimensions may not show much considering how quickly it converges, I've made a graph in 55 dimensions using a population size of 500 and over 100 epochs. Otherwise the parameters remain the same.\n",
     "\n",
-    "<img width=432px src=\"./images/plot_over_time.png\"/>\n",
+    "<img width=\"432px\" src=\"./images/plot_over_time.png\"/>\n",
     "\n",
     "This show the population best (green) and population average (blue) over time. Note the population best increases or remains the same with each generation whereas the population average does fluctuate (although the trend remains improving). This is due to mutation making the population on average more diverse and thus fitness fluctuates.\n",
     "\n",
     "Lastly, here's a full runthrough of the algorithm with original conditions in two dimensions for ten epochs:\n",
     "\n",
-    "<img width=432px src=\"./images/animation.gif\"/>\n",
+    "<img width=\"432px\" src=\"./images/animation.gif\"/>\n",
     "\n",
     "You can see the population does shrink around the global optimum which is the expected result.\n",
     "\n",
