--- a/genetic-algorithms-tutorial.ipynb
+++ b/genetic-algorithms-tutorial.ipynb
@@ -1008,7 +1008,7 @@
     "\n",
     "<img width=\"432px\" src=\"./images/plot_over_time.png\"/>\n",
     "\n",
-    "This show the population best (green) and population average (blue) over time. Note the population best increases or remains the same with each generation whereas the population average does fluctuate (although the trend remains improving). This is due to mutation making the population on average more diverse and thus fitness fluctuates.\n",
+    "This shows the population best (green) and population average (blue) over time. Note the population best increases or remains the same with each generation whereas the population average does fluctuate (although the trend remains improving). This is due to mutation making the population on average more diverse and thus fitness fluctuates.\n",
     "\n",
     "Lastly, here's a full runthrough of the algorithm with original conditions in two dimensions for ten epochs:\n",
     "\n",
@@ -1143,14 +1143,14 @@
    "source": [
     "You may wish to catch for errors (as I have done none here), and perhaps accept some of the parameters as command line arguments. This code, as-is, should run in a terminal but allows for zero customization unless you change the code manually. Some parameters might include mutation and crossover rates, population size, how many epochs, etc.\n",
     "\n",
-    "You can save this code as genetic_algorithm.py and execute it as one of the below:\n",
+    "You can save this code as `genetic_algorithm.py` and execute it as one of the below:\n",
     "\n",
     "```\n",
     "$ python3 genetic_algorithm.py\n",
     "$ ./genetic_algorithm.py\n",
     "```\n",
     "\n",
-    "You can also find the code in ./code. For a Java implementation I did for string decryption, you can see <a href=\"https://github.com/stratzilla/genetic-decryption\">here</a>."
+    "You can also find the code in `./code`. For a Java implementation I did for string decryption, you can see <a href=\"https://github.com/stratzilla/genetic-decryption\">here</a>."
    ]
   }
  ],
