--- a/genetic-algorithms-tutorial.ipynb
+++ b/genetic-algorithms-tutorial.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "The general idea of population evolving can be visualized below:\n",
     "\n",
-    "<img src=\"./images/population_evolution.png\" width=70%/>\n",
+    "<img src=\"./images/population_evolution.png\" width=\"70%\"/>\n",
     "\n",
     "Here, a population of twelve candidates is already sorted from most fit to worst fit (blue means more fit). Elites (yellow) are chosen which go into the new generation verbatim but also join the mating pool (purple). A tournament (green) is also conducted between a random subset of the population. The elites and the winner of the tournament go into the mating pool which go on to populate the remainder of the population (burgundy).\n",
     "\n",
