--- a/genetic-algorithms-tutorial.ipynb
+++ b/genetic-algorithms-tutorial.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "The general idea of population evolving can be visualized below:\n",
     "\n",
-    "<img src=\"./images/population_evolution.png\" width=70%/>\n",
+    "<img src=\"./images/population_evolution.png\" width=\"70%\"/>\n",
     "\n",
     "Here, a population of twelve candidates is already sorted from most fit to worst fit (blue means more fit). Elites (yellow) are chosen which go into the new generation verbatim but also join the mating pool (purple). A tournament (green) is also conducted between a random subset of the population. The elites and the winner of the tournament go into the mating pool which go on to populate the remainder of the population (burgundy).\n",
     "\n",
@@ -556,6 +556,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
+    "\n",
     "CROSS_RATE = 1.00 # chosen for illustrative purposes\n",
     "\n",
     "def crossover(parent_a, parent_b):\n",
@@ -570,7 +572,7 @@
     "    \"\"\"\n",
     "    # only perform crossover based on the crossover rate\n",
     "    if random.uniform(0.00, 1.00) >= CROSS_RATE:\n",
-    "        return parent_a, parent_b\n",
+    "        return copy.deepcopy([parent_a, parent_b])\n",
     "    child_a, child_b = [], []\n",
     "    # find a pivot point at random\n",
     "    pivot = random.randint(1, len(parent_a)-1)\n",
@@ -1006,13 +1008,13 @@
     "\n",
     "Since a graph of closeness to target over time for two dimensions may not show much considering how quickly it converges, I've made a graph in 55 dimensions using a population size of 500 and over 100 epochs. Otherwise the parameters remain the same.\n",
     "\n",
-    "<img width=432px src=\"./images/plot_over_time.png\"/>\n",
+    "<img width=\"432px\" src=\"./images/plot_over_time.png\"/>\n",
     "\n",
-    "This show the population best (green) and population average (blue) over time. Note the population best increases or remains the same with each generation whereas the population average does fluctuate (although the trend remains improving). This is due to mutation making the population on average more diverse and thus fitness fluctuates.\n",
+    "This shows the population best (green) and population average (blue) over time. Note the population best increases or remains the same with each generation whereas the population average does fluctuate (although the trend remains improving). This is due to mutation making the population on average more diverse and thus fitness fluctuates.\n",
     "\n",
     "Lastly, here's a full runthrough of the algorithm with original conditions in two dimensions for ten epochs:\n",
     "\n",
-    "<img width=432px src=\"./images/animation.gif\"/>\n",
+    "<img width=\"432px\" src=\"./images/animation.gif\"/>\n",
     "\n",
     "You can see the population does shrink around the global optimum which is the expected result.\n",
     "\n",
@@ -1038,6 +1040,7 @@
     "#!/usr/bin/env python3\n",
     "\n",
     "from math import ceil\n",
+    "import copy\n",
     "import random\n",
     "\n",
     "def genetic_algorithm(el_p, to_p, dim, epochs, function):\n",
@@ -1075,7 +1078,7 @@
     "\n",
     "def crossover(parent_a, parent_b):\n",
     "    if random.uniform(0.00, 1.00) >= CROSS_RATE:\n",
-    "        return parent_a, parent_b\n",
+    "        return copy.deepcopy([parent_a, parent_b])\n",
     "    child_a, child_b = [], []\n",
     "    pivot = random.randint(1, len(parent_a)-1)\n",
     "    for i in range(0, len(parent_a)):\n",
@@ -1143,14 +1146,14 @@
    "source": [
     "You may wish to catch for errors (as I have done none here), and perhaps accept some of the parameters as command line arguments. This code, as-is, should run in a terminal but allows for zero customization unless you change the code manually. Some parameters might include mutation and crossover rates, population size, how many epochs, etc.\n",
     "\n",
-    "You can save this code as genetic_algorithm.py and execute it as one of the below:\n",
+    "You can save this code as `genetic_algorithm.py` and execute it as one of the below:\n",
     "\n",
     "```\n",
     "$ python3 genetic_algorithm.py\n",
     "$ ./genetic_algorithm.py\n",
     "```\n",
     "\n",
-    "You can also find the code in ./code. For a Java implementation I did for string decryption, you can see <a href=\"https://github.com/stratzilla/genetic-decryption\">here</a>."
+    "You can also find the code in `./code`. For a Java implementation I did for string decryption, you can see <a href=\"https://github.com/stratzilla/genetic-decryption\">here</a>."
    ]
   }
  ],
