Added map and plot

--- a/genetic-algorithms-tutorial.ipynb
+++ b/genetic-algorithms-tutorial.ipynb
@@ -74,13 +74,15 @@
     "\n",
     "$$f(x) = \\frac{1}{2} \\times \\sum_{i=1}^d (x_i^4 - 16x_i^2 + 5x_i)$$\n",
     "\n",
-    "And can be visualized as below (credit to <a href=\"https://www.sfu.ca/~ssurjano/stybtang.html\">the Virtual Library of Simulation Experiments</a>):\n",
+    "And can be visualized as below:\n",
     "\n",
-    "<img src=\"./images/stybtang.png\"/>\n",
+    "<img src=\"./images/styb-tang.png\"/>\n",
     "\n",
-    "This function can be applied to any dimensionality and has a global minima of $f(x^*) = -39.16599\\times d$ at $x^* = (-2.903534, ..., -2.903534)$. For this tutorial, I'll be using a dimensionality of two to best visualize on a 2D plot. From the function, the global minimum in two dimensions is $-39.16599 \\times 2 = -78.33198$. \n",
+    "This function can be applied to any dimensionality and has a global minima of $f(x^*) = -39.16599\\times d$ at $x^* = (-2.903534, ..., -2.903534)$. For this tutorial, I'll be using a dimensionality of two to best visualize on a 2D plot. From the function, the global minimum in two dimensions is $-39.16599 \\times 2 = -78.33198$. We can see this in a map:\n",
     "\n",
-    "We have the fitness function, what about the search space? The interval in which our points will lay is $[-5, 5]$ as per the source above. We'll use this information to also generate a population later: we want to initialize a random population within the boundaries of the search space. Points in our system will be described as arrays of length `d`, where `d` is the dimensionality of the problem--in this case, two.\n",
+    "<img src=\"./images/styb-tang-map.png\"/>\n",
+    "\n",
+    "We have the fitness function, what about the search space? The interval in which our points will lay is $[-5, 5]$. We'll use this information to also generate a population later: we want to initialize a random population within the boundaries of the search space. Points in our system will be described as arrays of length `d`, where `d` is the dimensionality of the problem--in this case, two.\n",
     "\n",
     "We'll define the search space and fitness function now:"
    ]
