Fixed typos, LaTeX

--- a/genetic-algorithms-tutorial.ipynb
+++ b/genetic-algorithms-tutorial.ipynb
@@ -22,9 +22,9 @@
     "- what are the crossover and mutation operators?\n",
     "- what are the chances of crossover and mutation occurring?\n",
     "\n",
-    "The search space being the possible space in which the solution lies, the fitness function being a heuristic to gauge how fit a solution is, and the remainder I'll get to in the implementation.\n",
+    "The search space being the possible space in which the solution lies, the fitness function being a heuristic to determine how fit a solution is, and the remainder I'll get to in the implementation.\n",
     "\n",
-    "Genetic algorithms are often referred to as metaheuristics, or a procedure which generates a solution to an optimization problem. In this tutorial, I'm effectively optimizing a given function and finding an optima. Metaheuristics can be used problem agnostically and can be applied to anything, really. One interesting way to use genetic algorithms is to train a neural network.\n",
+    "Genetic algorithms are often referred to as metaheuristics, or a procedure which generates a solution to an optimization problem. In this tutorial, I'm effectively optimizing a given function and finding an optima. Metaheuristics can be used problem agnostic and can be applied to anything, really. One interesting way to use genetic algorithms is to train a neural network.\n",
     "\n",
     "Just as a note on terminology: I say \"solution\", \"candidate\" and \"chromosome\" interchangeably. This is just one of the individuals from the population, the attributes of which are used to find the fitness of that individual. The most proper term would be \"chromosome\". A chromosome is comprised of \"genes\"; these are the attributes I had just mentioned.\n",
     "\n",
@@ -72,7 +72,7 @@
     "\n",
     "This tutorial will use a common optimization test problem, the Styblinski-Tang Function, which is defined as:\n",
     "\n",
-    "$$f(x) = \\frac{1}{2} \\times \\sum_{i=1}^d (x_i^4 - 16x_i^2 + 5x_i)$$\n",
+    "$$f(x) = \\frac{1}{2} \\sum_{i=1}^d (x_i^4 - 16x_i^2 + 5x_i)$$\n",
     "\n",
     "And can be visualized as below:\n",
     "\n",
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is not exact but $-78.33233 \\approx -78.33198$ so it's close enough for our purposes. We know our global minima is around this point. We've initialized this as a global variable because we want to see where the minima is in our plots.\n",
+    "This is not exact but $-78.33233 \\approx -78.33198$ so it's close enough for our purposes. We know our global minimum is around this point. We've initialized this as a global variable because we want to see where the minimum is in our plots.\n",
     "\n",
     "## Chromosome Representation\n",
     "\n",
@@ -214,7 +214,7 @@
     "\n",
     "## Population Initialization\n",
     "\n",
-    "For our genetic algorithm to work, we need to first initialize a random population of candidate solutions to the problem. Since we're optimizing a mathematical function in two dimensions, a candidate solution is simply any x,y-coordinate pair. For example, our optimal pair was `(-2.903534, -2.903534)`. The key point, however, is the candidate solutions are random initially. \n",
+    "For our genetic algorithm to work, we need to first initialize a random population of candidate solutions to the problem. Since we're optimizing a mathematical function in two dimensions, a candidate solution is simply any `x,y`-coordinate pair. For example, our optimal pair was `(-2.903534, -2.903534)`. The key point, however, is the candidate solutions are random initially. \n",
     "\n",
     "We can generate a population like the below, using a population size of `200` since this is a relatively trivial problem:"
    ]
@@ -341,7 +341,7 @@
     "\n",
     "## Mating Pool Selection\n",
     "\n",
-    "The way genetic algorithms work is they take the most fit individuals of a population and generate offspring from them. There's a careful balance needed here to maintain diversity in the population (so the algorithm does not stagnate to local minima) but also propagate the best fit individuals into next generations (so the algorithm does improve over time). To this end, elites are chosen as well as a tournament is conducted to determine which candidates in the population become parents for the next generation.\n",
+    "The way genetic algorithms work is they take the most fit individuals of a population and generate offspring from them. There's a careful balance needed here to maintain diversity in the population (so the algorithm does not stagnate to local minimum) but also propagate the best fit individuals into next generations (so the algorithm does improve over time). To this end, elites are chosen as well as a tournament is conducted to determine which candidates in the population become parents for the next generation.\n",
     "\n",
     "The general idea of population evolving can be visualized below:\n",
     "\n",
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The percentage of elites should be empirically found but it should be relatively small, for example within `[1, 5]` percent. We'll use 5% for the sake of example:"
+    "The percentage of elites should be empirically found but it should be relatively small, for example within `[1, 5]%`. We'll use `5%` for the sake of example:"
    ]
   },
   {
@@ -524,7 +524,7 @@
     "\n",
     "Imagine a scenario where there were no individuals with a relatively close fitness to optima: for example, if the most fit individuals were very far from optima. When the new population is initialized based on the mating pool, the algorithm may get stuck in that area and not converge to a better solution. Likewise, if you were to have a mating pool only consisting of the same individual (reduplication), the algorithm no longer improves. \n",
     "\n",
-    "Tournaments allow a random selection of remaining individuals in the population to compete to enter the mating pool. Even if this selection is not the most fit, sometimes you need fewer fit individuals to help the overall population by introducing diversity. Like elite selection, a proportion of the population is chosen to enter a tournament, and the most fit individual from this tournament enters the mating pool. The tournament is, however, initialized from random individuals from the population. And like elite selection, the percent of individuals who enter the tournament should be empirically found but we'll use 2%:"
+    "Tournaments allow a random selection of remaining individuals in the population to compete to enter the mating pool. Even if this selection is not the most fit, sometimes you need fewer fit individuals to help the overall population by introducing diversity. Like elite selection, a proportion of the population is chosen to enter a tournament, and the most fit individual from this tournament enters the mating pool. The tournament is, however, initialized from random individuals from the population. And like elite selection, the percent of individuals who enter the tournament should be empirically found but we'll use `2%`:"
    ]
   },
   {
@@ -901,7 +901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see a lot of candidates around the optima. But what would be real exciting is to get most of the population around that point and to verify successive calls of our evolution algorithm proves fruitful in finding the fitness minimum. First, however, we should define a way to gauge best and overall fitness of the population:"
+    "We see a lot of candidates around the optima. But what would be real exciting is to get most of the population around that point and to verify successive calls of our evolution algorithm proves fruitful in finding the fitness minimum. First, however, we should define a way to determine best and overall fitness of the population:"
    ]
   },
   {
@@ -1097,7 +1097,7 @@
     "\n",
     "This shows the population best (green) and population average (blue) over time. Note the population best increases or remains the same with each generation whereas the population average does fluctuate (although the trend remains improving). This is due to mutation making the population on average more diverse and thus fitness fluctuates.\n",
     "\n",
-    "Lastly, here's a full runthrough of the algorithm with original conditions in two dimensions for ten epochs:\n",
+    "Lastly, here's a full run-through of the algorithm with original conditions in two dimensions for ten epochs:\n",
     "\n",
     "<img width=\"432px\" src=\"./images/animation.gif\"/>\n",
     "\n",
